language/move-lang/tests/move_check/typing/constraints_not_satisfied_lvalues_pack_type_args.exp
error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_lvalues_pack_type_args.move:2:20 ───
   │
 8 │         let B<CupC<R>> {} = abort 0;
   │               ^^^^^^^ Constraint not satisfied. The resource type '0000000000000000000000000000000000000000000000000000000008675309.M.R' does not satisfy the constraint 'copyable'
   ·
 3 │     resource struct R {}
   │     -------- The type's constraint information was declared here
   ·
 2 │     struct CupC<T: copyable> {}
   │                    -------- 'copyable' constraint declared here
   │

error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_lvalues_pack_type_args.move:2:20 ───
   │
 9 │         B<CupC<R>> {} = abort 0;
   │           ^^^^^^^ Constraint not satisfied. The resource type '0000000000000000000000000000000000000000000000000000000008675309.M.R' does not satisfy the constraint 'copyable'
   ·
 3 │     resource struct R {}
   │     -------- The type's constraint information was declared here
   ·
 2 │     struct CupC<T: copyable> {}
   │                    -------- 'copyable' constraint declared here
   │

